--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ body{
     border: none;
     color:white ;
     border-radius: 5px;
+    padding: 10px;
+    margin-top: 10px;
 }
 #send_btn:hover{
     background-color: rgb(32, 114, 87);
