--- a/social-links-profiles/style.css
+++ b/social-links-profiles/style.css
@@ -15,6 +15,7 @@ body{
     align-items: center;
     justify-content: center;
     background-color: rgb(194,195,255);
+}
 .container{
     width: 25%;
     height: 75%;
